Merged PR 52: introduced wiremock
introduced wiremock